--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -52,4 +52,5 @@ label.inline .form-control{display: inline-block;width:auto}
 .c_on{background-color: @color-select;}
 .c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);}
 
-.formWrap .footerCnt{border-top:1px solid #e2e2e2;margin-top:40px;}
+.formWrap .footerCnt{border-top:1px solid #e2e2e2;margin-top:20px;}
+.row .errInfo{height: 36px;}
