--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -16,6 +16,7 @@ html,body{background-color: @color-body;}
 
 .container{width:1000px;margin:0 auto;}
 
+.c-2{width: 20%;}
 .c-3{width: 30%;}
 .c-4{width: 40%;}
 .c-5{width: 50%;}
