--- a/src/pages/assess_step_1/index.less
+++ b/src/pages/assess_step_1/index.less
@@ -13,10 +13,10 @@
 
 .formWrap{background-color: #fff;padding:28px 24px;margin-bottom: 30px;}
 .formWrap .row{
-	margin-bottom: 24px;
 	.col2{margin-left: 160px;
 		.fieldWrap{display:inline-block;width:374px;}
 	}
+	.errInfo{margin-left: 160px;}
 	.control-label{font-size: 15px;color: #444;}
 	.control-label em{margin-left: 10px;}
 }
