--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -11,6 +11,7 @@ html,body{background-color: @color-body;}
 ::-moz-placeholder { color: @placeholder; }
 ::-webkit-input-placeholder { color:@placeholder; }
 :-ms-input-placeholder { color:@placeholder; }
+.input.form-control{color:@color-blue;}
 
 .prefix() {content: " "; display: block; width: 0; height: 0;position: absolute;border-top: 20px solid transparent;border-bottom: 20px solid transparent;}
 
