--- a/src/assets/less/mod/base.less
+++ b/src/assets/less/mod/base.less
@@ -28,7 +28,7 @@ html,body,input,textarea,button,select {font: 14px/1.42857143 'Microsoft Yahei',
 .toe{text-overflow:ellipsis;white-space:nowrap !important;overflow:hidden;}
 .txthidden{font:0/0 a;overflow: hidden;}
 .w99{max-width:99%;} .lh15{line-height:1.5;}
-.pixel1{height:100%;width:1px;display:inline-block;}
+.pixel1{height:100%;width:1px;display:inline-block;vertical-align: middle;}
 .media,.media-body{overflow: hidden;zoom:1;}
 .ellipsis{overflow:hidden;text-overflow: ellipsis;white-space: nowrap;}
 
