--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -6,15 +6,14 @@
 }
 
 .btn-positive { color: #fff;border: 1px solid #f4b64f;background-color: #f4b64f;}
-.btn-negative {color: #7E6D27;border: 1px solid #D0BC99;background-color: #FEF6C8;}
+.btn-negative {color: #fff;border: 1px solid #999;background-color: #999;cursor:default;}
 .btn-primary {color: #fff;border: 1px solid #61c0e2;background-color: #61c0e2;border-radius: 3px;}
 .btn-default {color: #333;background-color: #fff;border-color: #ccc;}
 .btn-outlined {background-color: transparent;}
 .btn-outlined.btn-primary {color: #61c0e2;}
 .btn-outlined.btn-positive {color: #f4b64f;}
-.btn-outlined.btn-negative {color: #d9534f;}
 .btn-positive:hover{color: #fff;border: 1px solid #E3A94F;background-color: #E3A94F;}
-.btn-negative:hover, .btn-negative.hover { color: #7E6D27;border: 1px solid #D0BC99;background-color: #FEF6F6;}
+.btn-negative:hover, .btn-negative.hover { color: #fff;border: 1px solid #999;background-color: #999;}
 .btn-primary:hover, .btn-primary.hover {color: #fff;border: 1px solid #46a4c5;background-color: #46a4c5;}
 .btn-default:hover{color: #333;background-color: #ebebeb;border-color: #adadad;}
 .btn:disabled,.btn.disabled,.btn:disabled:hover,.btn.disabled:hover{color:#fff;background-color:#ccc;border-color:#ccc;}
@@ -23,3 +22,23 @@
 .btn-medium { padding: 6px 32px;font-size: 16px;}
 .btn-form { width:320px;line-height:40px;font-size: 20px;}
 .btn-block {padding:10px 0;font-size: 24px;display: block;width:100%;border-radius: 4px;}
+.bd{border-radius: 4px;}
+
+.btn-loading{width:120px;line-height: 32px;padding:0;font-size: 16px;}
+.btn .loadingTxt {display: none}
+.btn .subTxt,.btn.loading .loadingTxt {display: inline-block}
+.btn.loading .loadingTxt i {display: inline-block;}
+.btn.loading .subTxt {display: none;margin-left: 4px}
+.btn.loading  .loadingSubTxt{margin-left: 4px;display: inline-block;}
+.btnLoadingWrap{margin-top: 32px;}
+.loadingIcon {
+    display: inline-block;width: 18px;height: 18px;
+    background-image: url("../../img/loading.png");
+    background-repeat: no-repeat;
+    vertical-align: middle; 
+    animation: loading 0.8s linear infinite;
+}
+@keyframes loading {
+    0% { transform: rotate(0deg);}
+    100% {transform: rotate(360deg); }
+}
