--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -53,4 +53,6 @@ label.inline .form-control{display: inline-block;width:auto}
 .c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);}
 
 .formWrap .footerCnt{border-top:1px solid #e2e2e2;margin-top:20px;}
+.formWrap .btnRow{margin-top: 24px;text-align: center;}
 .row .errInfo{height: 40px;}
+.errTxt{ visibility: hidden;color: #886748;font-size: 14px;line-height: 18px;height: 18px; margin-top: 4px;margin-bottom:10px;text-align: center}
