--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -58,7 +58,7 @@
 		& >.fl{margin-right: 8px;}
 		.media-body{line-height: 24px;
 			.txt{height: 48px;}
-			a{display: block;}
+			a:hover .txt{color: #666;}
 		}
 		.detail{margin-top: 4px;}
 	}
