--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -8,9 +8,6 @@
 
 html,body{background-color: @color-body;}
 
-::-moz-placeholder { color: @placeholder; }
-::-webkit-input-placeholder { color:@placeholder; }
-:-ms-input-placeholder { color:@placeholder; }
 .input.form-control{color:@color-blue;}
 
 .prefix() {content: " "; display: block; width: 0; height: 0;position: absolute;border-top: 20px solid transparent;border-bottom: 20px solid transparent;}
@@ -82,4 +79,15 @@ html,body{background-color: @color-body;}
  .fis_4{background-position: -75px 0;}
  .fis_5{background-position: -100px 0;}
  .fis_6{background-position: -125px 0;}
+
+ .tabs > nav{border-bottom:1px solid #e2e2e2;}
+ .tabs > nav li{
+ 	display: inline-block;font-size: 15px;line-height: 34px;background-color: #ededed;border:1px solid #e2e2e2;border-bottom:none;
+	border-top-left-radius: 8px;border-top-right-radius: 8px;width: 100px;margin-right: 2px;text-align: center;
+	&.current{background-color: #fff;}
+	&.current a{border-bottom-color: #fff;}
+	a {position: relative;display: block;color: #555;border-bottom: 1px solid #e2e2e2;margin-bottom: -1px;}
+}
+.tabs .content-wrap{margin-top: 24px;}
+
 
