--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -1,19 +1,95 @@
 @color-blue: #61c0e2;
+@color-orange: #f4b64f;
+
+.orange{color: @color-orange;}
 
 .mainContainer{margin-bottom: 36px;}
 .m-sideNav{background-color: #ddd;padding-top: 20px;}
 .avatarWrap .imgWrap{display:inline-block;border:1px solid #b7b7b7;}
 .userInfoList{margin-top: 20px;font-size: 16px;overflow: hidden;
-	a{color: #fff;display: block;background-color: #606060;}
-	.current a{background-color: @color-blue;}
+	a{color: #fff;display: block;}
 }
 .blue{color: @color-blue;}
-.userInfoList li{text-align:center;line-height:40px;border-bottom: 1px solid #fff; margin-bottom:-1px;}
+.userInfoList li{text-align:center;line-height:40px;border-bottom: 1px solid #fff; background-color: #606060;
+	&:hover,&.current{background-color: @color-blue;}
+	&.last{border-bottom: none;}
+}
 .kefu{margin-top:180px;font-size: 14px;color: #333;line-height: 2;padding: 0 0 16px 16px;}
 
-.contentWrap .well{color:@color-blue;font-size: 15px;background-color: #fff;padding-left:16px;line-height:36px;margin-bottom: 10px;
+.contentWrap .topWell{color:@color-blue;font-size: 15px;background-color: #fff;padding-left:16px;line-height:36px;margin-bottom: 10px;
 	.square{width: 10px;height: 10px;display: inline-block;background-color: @color-blue;margin-right: 8px;}
 }
 
-.contentInner{background-color: #fff;border:1px solid #e5e5e5;padding:30px 0 30px 20px;}
+.contentInner .content{background-color: #fff;border:1px solid #e5e5e5;padding: 30px 24px;}
 .row label + .col2{width:374px;}
+.contentInner{display: none;}
+.myInfo{display: block;}
+
+.wellWrapper .well{background-color: #f9f9f9;border:1px solid #dadada;padding:15px;font-size: 14px;color:#333;line-height: 20px;margin-bottom: 30px;}
+.well .media {
+	margin-top: 8px;
+	.fl{margin-right:16px;
+		.btn{width:108px;padding:9px 0;}
+	} 
+}
+.well .media-body .field{display: inline-block;margin-right: 30px;}
+.detailInfo {
+	.btn{padding-top:5px;padding-bottom: 5px;} 
+	.detailTxt{color: @color-blue;margin-top: 4px;display: block;text-align: center;}
+}
+
+.badgeRow{margin-bottom: 10px;}
+.badgeRow .badge{font-size: 12px;line-height: 18px;border-radius: 10px;text-align: center;width:36px;color:#fff;margin-left: 5px;}
+.badge.red{background-color: #eb0748;}
+.badge.green{background-color: #5aa403;}
+.badgeRow .badgetitle{display: inline-block;color:#333;font-size:18px;margin-right: 8px;}
+
+.schoolList li{padding:16px 14px;background-color: #f9f9f9;border:1px solid #e2e2e2;margin-bottom: 10px;}
+.schoolList .detail{
+	font-size: 14px;color: #555;line-height: 1.5;
+	.field{display: inline-block;margin-right: 20px;color:@color-orange;}
+}
+.schoolList .btn{margin-top: 6px;}
+
+.majorList li{margin-bottom: 20px;}
+.majorList .bs{font-size: 16px;color: #333;line-height: 36px;padding-left: 10px;}
+.bg-gf{background-color: #f1f1f1;}
+.majorList .btnsRow{margin-top: 20px;
+	.btn{width:110px;font-size: 14px;border-radius: 0;margin-right: 20px;}
+}
+
+.infoList li{margin-bottom: 20px;border-bottom:1px solid #e2e2e2;padding-bottom: 20px;}
+.detailCnt{font-size: 14px;color: #999;line-height: 1.5;}
+.infoList .media > .fl{margin-right: 14px;}
+.infoList .detailTitle{font-size: 18px;color: #333;margin-bottom: 12px;}
+.infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
+.infoList .detailCnt{margin-top: 24px;}
+
+.q-school{
+	h3{font-size: 16px;margin-bottom: 16px;}
+}
+
+.s-faq{
+	font-size: 15px;color: #333;padding:0 12px;border:1px solid #e2e2e2;margin-bottom: 20px;
+	.q,.a{padding:16px 0px;}
+	.q{border-bottom: 1px solid #e2e2e2;}
+	.badges{margin-top: 16px;}
+	.badge{display:inline-block;min-width:72px;font-size: 14px;color: #fff;text-align: center;line-height: 24px;border-radius: 12px;background-color: @color-blue;margin-right: 10px;}
+}
+
+.book .media .btn{border-radius: 3px;color:#fff;border:none;}
+.btn-green{background-color: #5aa403;}
+.btn-gray{background-color: #939393; }
+.btn-red{background-color: #eb0748; }
+.book .media > .fl .btn-lines{line-height: 1;padding-top:7px;padding-bottom: 7px;color: #fff;}
+.book .media-body span{display:inline-block;margin-right: 20px; }
+.book .detailInfo{margin-top: 12px;color: #999;}
+
+.btn-mid{vertical-align: middle;width: 108px;padding-top:9px;padding-bottom: 9px;}
+.coupon .btn{border-radius: 0;margin-right: 16px;}
+.coupon .detailInfo{color:#999;font-size: 14px;float:right;text-align: right;vertical-align: middle;height:40px;}
+.coupon .well .media{margin-top: 0;}
+.coupon .well.disabled{color:#999;}
+.coupon-type{font-size: 20px;}
+.vm-wrapper{width: 99%;vertical-align: middle;}
+
