--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -24,12 +24,15 @@
 .btn-block {padding:10px 0;font-size: 24px;display: block;width:100%;border-radius: 4px;}
 .bd{border-radius: 4px;}
 
-.btn-loading{width:120px;line-height: 32px;padding:0;font-size: 16px;}
+.btn-loading{min-width:120px;line-height: 32px;padding:0;font-size: 16px;}
 .btn .loadingTxt {display: none}
 .btn .subTxt,.btn.loading .loadingTxt {display: inline-block}
 .btn.loading .loadingTxt i {display: inline-block;}
 .btn.loading .subTxt {display: none;margin-left: 4px}
 .btn.loading  .loadingSubTxt{margin-left: 4px;display: inline-block;}
+.btn.loading-all .subTxt{display: none;}
+.btn .loading-all{display: none;}
+.btn.loading-all .loading-all{display: inline-block;}
 .btnLoadingWrap{margin-top: 32px;}
 .loadingIcon {
     display: inline-block;width: 18px;height: 18px;
