--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -20,7 +20,7 @@
 .disabled:active,.disabled:hover{background-color: #ccc;border-color: #ccc;}
 
 .btn-medium { padding: 6px 32px;font-size: 16px;}
-.btn-form { width:320px;line-height:40px;font-size: 20px;}
+.btn-form { width:320px;line-height:40px;font-size: 20px;border-radius: 0;padding-top:0;padding-bottom: 0;}
 .btn-block {padding:10px 0;font-size: 24px;display: block;width:100%;border-radius: 4px;}
 .bd{border-radius: 4px;}
 
