--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -49,7 +49,7 @@ html,body{background-color: @color-body;}
 	&.current a{background-color: @color-blue;color:#fff;
 		&:after{border-left-color: @color-blue;}
 	}
-	a {display: block;position:relative;text-align:center;padding:0 40px 0 20px;color: #555;height:40px;line-height:40px;margin-right:10px;;text-decoration: none; background: #e8e8e8; 
+	a {display: block;position:relative;text-align:center;padding:0 40px 0 20px;color: #555;height:40px;line-height:40px;margin-right:10px;;text-decoration: none; background: #e8e8e8;cursor: default; 
 		&:after { .prefix; border-left: 20px solid #e8e8e8;right: -20px;top: 0;z-index: 1; }
 		&:before { .prefix;border-left: 20px solid @color-body;left:0;top:0;}	
 	}
@@ -90,4 +90,6 @@ html,body{background-color: @color-body;}
 }
 .tabs .content-wrap{margin-top: 24px;}
 
+.bg{font-size: 16px;color:#333;padding-left: 10px;line-height: 34px;}
+.bg-f1{background-color: #f1f1f1;}
 
