--- a/src/pages/assess_step_2/index.less
+++ b/src/pages/assess_step_2/index.less
@@ -3,7 +3,7 @@
 .title a{color:inherit;
 	&:hover{color:inherit;}
 }
-.p_assess_1{margin-top: 24px;}
+.p_assess{margin-top: 24px;}
 .icon() {
  	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
 }
@@ -16,14 +16,9 @@
 
 .formWrap{background-color: #fff;padding:28px 24px;margin-bottom: 30px;}
 .formWrap .row{
-	margin-bottom: 40px;
 	.col2{margin-left: 160px;width:374px;}
 	.control-label{font-size: 15px;color: #444;}
 	.control-label em{margin-left: 10px;}
-}
-
-.formWrap{
-	.btnRow{margin-top: 60px;text-align: center;}
 }
 
 .ant-select{margin-right: 20px;}
