--- a/src/pages/case_1/index.less
+++ b/src/pages/case_1/index.less
@@ -6,7 +6,7 @@
 .selectContent .col1,.selectContent .col2{margin-right: 80px;}
 .selectContent h4{color:#333;font-size: 16px;font-weight: normal;margin-bottom: 12px;}
 .selectWrap{width:160px;border:1px solid #ccc;cursor: pointer;height: 300px;padding:5px 0;}
-.selectWrap li{color: #333;line-height: 24px;font-size: 14px;padding-left: 10px;height:24px;
+.selectWrap li{color: #333;line-height: 24px;font-size: 14px;padding-left: 10px;
 	&:hover{background-color: #ededed;}
 }
 
@@ -14,9 +14,9 @@
 .scrollBeautifyBar{background-color: #c1c1c1;width:8px;border-radius: 4px;}
 
 .city.disabled{background-color: #fff;}
-.city label{cursor: pointer;display: block;}
+.city label{cursor: pointer;}
 .city label em,.city label input{vertical-align: middle;}
 .city label em{display: inline-block;margin-left: 4px;}
-.tagsWrap{margin-right: -32px;width:480px}
-.tagList{position: relative;margin-bottom:30px;width:90px;line-height: 32px;background-color: #ededed;color:#333;text-align: center;margin-right:30px;border:1px solid #ccc; float: left;}
-.tagList .icon-close{position: absolute;right:-10px;top:-10px;color:#fff;text-align:center;line-height:20px;cursor: pointer;display: inline-block;width:20px;height:20px;border-radius:50%;background-color: #e71218;z-index:1;}
+
+.tagList{position: relative;width:90px;line-height: 32px;background-color: #ededed;color:#333;text-align: center;margin-right:40px;border:1px solid #ccc; }
+.tagList .icon-close{position: absolute;right:-10px;top:-10px;color:#fff;text-align:center;line-height:20px;cursor: pointer;display: inline-block;width:20px;height:20px;border-radius:50%;background-color: #e71218;}
