--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -56,3 +56,16 @@ label.inline .form-control{display: inline-block;width:auto}
 .formWrap .btnRow{margin-top: 24px;text-align: center;}
 .row .errInfo{height: 40px;}
 .errTxt{ visibility: hidden;color: #886748;font-size: 14px;line-height: 18px;height: 18px; margin-top: 4px;margin-bottom:10px;text-align: center}
+
+
+.label_radio{
+    display:inline-block;position:relative;overflow:hidden;text-align:center;font-size: 15px;color: #fff;width: 80px;line-height: 32px;border-radius: 4px;background-color: @color-blue;cursor: pointer;margin-right: 20px;
+    input {background: transparent;border: 0;position: absolute;left: -100%;width: 0;height: 0}
+    &:hover{background-color: @color-hover;}
+}
+.c_on{background-color: @color-select;}
+.c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);}
+
+
+
+
