--- a/src/pages/assess_step_3/index.less
+++ b/src/pages/assess_step_3/index.less
@@ -1,5 +1,8 @@
 .breadcrumb li{width:33.3%;}
-
+/* react默认样式覆盖 */
+.title a{color:inherit;
+	&:hover{color:inherit;}
+}
 .p_assess{margin-top: 24px;}
 .icon() {
  	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
@@ -13,10 +16,17 @@
 
 .formWrap{background-color: #fff;padding:28px 24px;margin-bottom: 30px;}
 .formWrap .row{
-	.col2{margin-left: 160px;
-		.fieldWrap{display:inline-block;width:374px;}
-	}
-	.errInfo{margin-left: 160px;}
+	margin-bottom: 20px;
+	.col2{margin-left: 160px;width:374px;}
 	.control-label{font-size: 15px;color: #444;}
 	.control-label em{margin-left: 10px;}
 }
+
+.formWrap .btn-positive{margin-right: 30px;}
+
+.cInfo{margin-bottom: 24px;}
+.onlyTxt{display:inline-block;line-height: 34px;height: 34px;color: #8d8d8d;font-size: 16px;}
+.collegeList{margin-top: 16px;}
+.collegeList span{display: inline-block;}
+.collegeList .n{color: #999;font-size: 16px;margin-right: 24px;}
+.collegeList .c{font-size: 14px;margin-right: 18px;line-height: 34px;background-color: #f3f3f3;border:1px solid #ccc;width:110px;text-align: center;}
