院校数据库

--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -58,3 +58,17 @@
 .navLists .fancy-select .options.open{
 	top: 72px;	
 }
+
+.navLists .fancy-select .down-app-options.open{top:84px;}
+
+.down-app-wrapper{width:148px;height: 148px;text-align: center;line-height: 148px;border:1px solid #e2e2e2;background-color: #fff;position: relative;padding:0;}
+.header{
+	.navLists .down-app-options{overflow: visible;left:-14px;background-color: #fff;}
+	.navLists .down-app-options .down-app-wrapper{padding:0;}
+	.navLists .down-app-options .down-app-wrapper.current{background-color: #fff;}
+	.floatTipWrap .mc {border-width: 10px}
+	.floatTipWrap .mcTt {top: -20px;left: 50%;margin-left: -10px;border-bottom-color: #e2e2e2}
+	.floatTipWrap .mcTt.mcInner {top: -19px;border-bottom-color: #fff}
+}
+
+
