--- a/src/assets/less/sidebar.less
+++ b/src/assets/less/sidebar.less
@@ -1,5 +1,5 @@
 // 导航条
-.s-aside{
+.m-aside{
 	position: fixed;left:50%;margin-left: 540px;bottom:180px;
 	.btn-aside{
 		font-size: 14px;background:#fff;color:#9c9c9c;line-height: 26px;border:1px solid #d1d1d1;display: block;width:54px;height: 64px;text-align: center;padding:0 10px; margin-top: -1px;
@@ -7,4 +7,12 @@
 		&:before{content:"";width:1%;vertical-align: middle;height:100%;display: inline-block;}
 		&:hover{color:#666;}
 	}
+	.floatTipWrap{opacity: 0;transition:all 0.4s ease;}
+	.floatTipWrap.show{opacity: 1;}
+	.down-app-wrapper{position:absolute;left:-160px;top:50%;margin-top:-74px;display: none;}
+
+	.floatTipWrap .mc {border-width: 10px}
+	.floatTipWrap .mcRt {right: -20px;top: 50%;margin-top: -10px;border-left-color: #e2e2e2}
+	.floatTipWrap .mcRt.mcInner {right: -19px;border-left-color: #fff}
 }
+
