增加院校资料库

--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -40,6 +40,7 @@ input,select,textarea {outline: none;}
 ::-webkit-inner-spin-button {-webkit-appearance: none; }
 input[type=number] {-moz-appearance: textfield;}
 .row.inline input{display: inline-block;}
+.row.inline > * {display: inline-block;}
 input[readonly]{color:#999;background-color: #f3f3f3;border-color:#e7e7e7;}
 .row label + .col2{width: auto;margin-left: 90px;}
 label.inline .form-control{display: inline-block;width:auto}
