--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -95,6 +95,7 @@ html,body{background-color: @color-body;}
 
 .bg{font-size: 16px;color:#333;padding-left: 10px;line-height: 34px;}
 .bg-f1{background-color: #f1f1f1;}
+.bg-f5{background-color: #f5f5f5;}
 
 .m-nav{
 	border:1px solid #e2e2e2;
@@ -126,4 +127,8 @@ html,body{background-color: @color-body;}
 		.show-more{display: none;}
 	}
 }
+
+.badgeRow .badge{font-size: 12px;line-height: 18px;border-radius: 10px;text-align: center;min-width:36px;color:#fff;margin-left: 5px;background-color: #ccc;padding:0 5px;}
+.badge.red{background-color: #eb0748;}
+.badge.green{background-color: #5aa403;}
 
