--- a/src/pages/college_2/index.less
+++ b/src/pages/college_2/index.less
@@ -11,6 +11,7 @@
 .college .col2{width:300px;}
 
 .formWrap{background-color: #fff;padding:20px 24px 36px;margin-bottom: 30px;}
+.row.inline > * {display: inline-block;}
 
 .contentWrap{
 	h4{font-weight: normal;font-size: 18px;}
