--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -60,7 +60,7 @@ html,body{background-color: @color-body;}
 	&:last-child a:after {display: none; }	
  }
 
- .badgeRow .badge{
+ .neeRow .badge{
  	display: inline-block;margin-left: 10px;color:@color-blue;font-size: 14px;
 	.icon-nee{
 	display:inline-block;vertical-align:middle;width:21px;height: 21px;background:url(../../img/neelogo.png);}
@@ -128,7 +128,7 @@ html,body{background-color: @color-body;}
 	}
 }
 
-.badgeRow .badge{font-size: 12px;line-height: 18px;border-radius: 10px;text-align: center;min-width:36px;color:#fff;margin-left: 5px;background-color: #ccc;padding:0 5px;}
+.badgeRow .badge{font-size: 12px;line-height: 18px;border-radius: 10px;text-align: center;min-width:36px;max-width:5em;overflow:hidden;color:#fff;margin-left: 5px;background-color: #ccc;padding:0 5px;}
 .badge.red{background-color: #eb0748;}
 .badge.green{background-color: #5aa403;}
 
