--- a/src/assets/less/mod/modalBox.less
+++ b/src/assets/less/mod/modalBox.less
@@ -56,6 +56,7 @@
 .verifyLabel{position: absolute;right:16px;top:18px;font-size: 14px;border-radius: 8px;color: #fff;background-color: @color-blue;line-height: 36px;width: 100px;cursor:pointer;
 	&:hover{background-color: @color-hover;}
 }
+.row .verifyLabel{color: #fff;}
 
 
 
