--- a/src/pages/pro_test_2/index.less
+++ b/src/pages/pro_test_2/index.less
@@ -10,12 +10,19 @@
 .contentWrap{background-color: #fff;padding:48px 36px;margin-bottom: 40px;}
 
 .qtestSliderWrap{width:510px;margin:0 auto;
-  &>ul{height:260px;}
+	h5{font-size: 18px;text-align: center;margin-bottom: 40px;}
+  	&>ul{height:260px;}
 }
+
+.part1 .title1{display: block;}
+.part1 .title2{display: none;}
+
+.part2 .title1{display: none;}
+.part2 .title2{display: block;}
+
 
 .contentSlider{
 	color: #333;position: absolute;top:0;left:0%;width:100%;height: 100%;
- 	h5{font-size: 18px;text-align: center;margin-bottom: 40px;}
  	.label{font-size: 16px;margin-bottom: 32px;}
 }
 
