--- a/src/assets/components/dropdown/dropdown.less
+++ b/src/assets/components/dropdown/dropdown.less
@@ -30,7 +30,8 @@
 }
 
 .fancy-select .options li {
-    padding: 8px 12px;
+    padding: 8px 0;
+    text-align: center;
     color: #fff;
     cursor: pointer;
     white-space: nowrap;
