--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -31,7 +31,7 @@
 .btn.loading .subTxt {display: none;margin-left: 4px}
 .btn.loading  .loadingSubTxt{margin-left: 4px;display: inline-block;}
 .btn.loading-all .subTxt{display: none;}
-.btn .loading-all{display: none;}
+.btn .loading-all{display: none;    font-size: 14px;}
 .btn.loading-all .loading-all{display: inline-block;}
 .btnLoadingWrap{margin-top: 32px;}
 .loadingIcon {
