--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -132,3 +132,9 @@ html,body{background-color: @color-body;}
 .badge.red{background-color: #eb0748;}
 .badge.green{background-color: #5aa403;}
 
+.no_transList{text-align: center;}
+.noListIcon{
+	.lookIcon();
+	background-image: url(../../img/noListIcon.png);width:67px;height: 55px;background-position: 0 0;
+}
+
