增加收藏功能，我的收藏取消分页

--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -45,3 +45,9 @@
     0% { transform: rotate(0deg);}
     100% {transform: rotate(360deg); }
 }
+
+.btn-fav .unfavedTxt{display: inline-block;}
+.btn-fav .favedTxt{display: none;}
+.btn-fav.faved .unfavedTxt{display: none;}
+.btn-fav.faved .favedTxt{display: inline-block;}
+.btn-fav.faved{background-color: #ccc;border-color: #ccc;}
