--- a/src/pages/college_2/index.less
+++ b/src/pages/college_2/index.less
@@ -14,7 +14,7 @@
 .row.inline > * {display: inline-block;}
 
 .contentWrap{
-	h4{font-weight: normal;font-size: 18px;}
+	h4{font-weight: normal;font-size: 18px;margin-bottom: 24px;}
 	.btn-mid{width:118px;padding-top:3px;padding-bottom: 3px;font-size: 16px;}
 }
 
