--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -44,6 +44,8 @@
 .badge.green{background-color: #5aa403;}
 .badgeRow .badgetitle{display: inline-block;color:#333;font-size:18px;margin-right: 8px;}
 
+.myInfo .errInfo{padding-left: 90px;}
+
 .schoolList li{padding:16px 14px;background-color: #f9f9f9;border:1px solid #e2e2e2;margin-bottom: 10px;}
 .schoolList .detail{
 	font-size: 14px;color: #555;line-height: 1.5;
