--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -32,6 +32,12 @@ input,select,textarea {outline: none;}
 .conflict .p-error-conflict{display:inline;}
 .conflict .p-error,.conflict .p-error-empty{display:none;}
 .input-control.error,.input.error, input.error, .error .input {border-color: #ec5524;}
+
+.modalForm{
+	.p-error{display: none;}
+	.p-error-empty{display: none;}
+}
+
 .input:focus, input.focus {border-color: #51b4ff;}
 .focus .p-note {display: inline-block;}
 .error .p-note {display: none;}
@@ -55,7 +61,7 @@ label.inline .form-control{display: inline-block;width:auto}
 .formWrap .footerCnt{border-top:1px solid #e2e2e2;margin-top:20px;}
 .formWrap .btnRow{margin-top: 24px;text-align: center;}
 .row .errInfo{height: 40px;}
-.errTxt{ visibility: hidden;color: #886748;font-size: 14px;line-height: 18px;height: 18px; margin-top: 4px;margin-bottom:10px;text-align: center}
+.errTxt{ visibility: hidden;color: #f83716;font-size: 14px;line-height: 18px;height: 18px; margin-top: 4px;margin-bottom:10px;text-align: center}
 
 
 .label_radio{
