--- a/src/assets/components/reg/tmpl.ejs
+++ b/src/assets/components/reg/tmpl.ejs
@@ -1,4 +1,4 @@
-<div class="modalCntWrap regModal taoModal g9">
+<div class="modalCntWrap regModal taoModal g9 modalForm">
  <h3 class="clearfix"><a href="javascript:;" class="icons btn-close fr"></a><span class="fl">注册</span></h3>
  <form class="modalSubCnt" id="regForm" onsubmit="return false;">
 
@@ -6,22 +6,35 @@
  <div class="row clearfix">
     <div class="inputWrap inputTextWrap">
       <span class="iconWrap"><i class="icon-user icon-phone"></i></span>
-      <input type="text" class="input form-control" id="mobible" name="mobible" maxLength="11" placeholder="请输入手机号" required autocomplete="off">
+      <input type="text" class="input form-control" id="mobile" name="mobile" maxLength="11" placeholder="请输入手机号" required autocomplete="off">
     </div>
+    <span class="p-error">手机号为11位数字格式</span>
+    <span class="p-error-empty">手机号不能为空</span>
  </div>
  <div class="row clearfix">
     <div class="inputWrap inputTextWrap">
       <span class="iconWrap"><i class="icon-user icon-lock"></i></span>
-      <input type="password" class="input form-control" id="pw" name="pw" maxLength="11" placeholder="请输入密码" required autocomplete="off">
+      <input type="password" class="input form-control" id="pw" name="pw" maxLength="20" placeholder="请输入密码" required autocomplete="off">
+    </div>
+     <span class="p-error">密码为4-20位数字或字母格式</span>
+    <span class="p-error-empty">密码不能为空</span>
+ </div>
+  <div class="row clearfix">
+    <div class="selectWrap selectTextWrap">
+      <span class="iconWrap"><i class="icon-user icon-lock"></i></span>
+      <select name="province" id="provinceId" class="form-control">
+        <option value="1">1</option>
+        <option value="2">2</option>
+      </select>
     </div>
  </div>
   <div class="row clearfix">
     <div class="inputWrap inputTextWrap">
       <span class="iconWrap"><i class="icon-user icon-code"></i></span>
-      <input type="password" class="input form-control" id="pw" name="pw" maxLength="11" placeholder="请输入密码" required autocomplete="off">
+      <input type="text" class="input form-control" id="code" name="code" maxLength="4" placeholder="请输入短信验证码" required autocomplete="off">
       <label class="usn verifyLabel active tc" id="verifyLabel">
 	        <em id="minCount" class="dn">
-	            <b class="orange n">
+	            <b class="red n">
 	                <time>-</time>
 	                秒</b>后重新发送
 	        </em>
@@ -29,6 +42,8 @@
 	        <em id="reSend" class="dn">点击重新发送</em>
 	  </label>
     </div>
+     <span class="p-error">验证码为4位数字格式</span>
+    <span class="p-error-empty">验证码不能为空</span>
  </div>
 </div>
 
