--- a/src/pages/case_2/index.less
+++ b/src/pages/case_2/index.less
@@ -20,3 +20,5 @@
 .tagsWrap{margin-right: -32px;width:480px}
 .tagList{position: relative;margin-bottom:30px;width:90px;line-height: 32px;background-color: #ededed;color:#333;text-align: center;margin-right:30px;border:1px solid #ccc; float: left;}
 .tagList .icon-close{position: absolute;right:-10px;top:-10px;color:#fff;text-align:center;line-height:20px;cursor: pointer;display: inline-block;width:20px;height:20px;border-radius:50%;background-color: #e71218;z-index:1;}
+
+.noList{font-size: 14px;color: #999;margin:20px 0 0 0;}
