--- a/src/assets/components/dropdown/dropdown.less
+++ b/src/assets/components/dropdown/dropdown.less
@@ -35,7 +35,7 @@
     color: #fff;
     cursor: pointer;
     white-space: nowrap;
-    border-top: 1px solid #fff;
+    border-top: 1px solid #3492b4;
     transition: all 150ms ease-out
 }
 
