--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -138,3 +138,6 @@ html,body{background-color: @color-body;}
 	background-image: url(../../img/noListIcon.png);width:67px;height: 55px;background-position: 0 0;
 }
 
+.preloading {background: url(//wacai-file.b0.upaiyun.com/finance/image/web/preload.gif) 50% 50px no-repeat;}
+.preloading .contentWrap{visibility: hidden;}
+
