--- a/src/pages/case_3/index.less
+++ b/src/pages/case_3/index.less
@@ -13,8 +13,8 @@
 }
 
 .mb12{margin-bottom: 12px;}
-.icon-radio{display:inline-block;width:28px;height:15px;vertical-align: middle;background: url(./img/eye.png);margin-right: 8px;}
-.c_on .icon-radio{background-position: 0 -15px;}
+.icon-eye{display:inline-block;width:28px;height:15px;vertical-align: middle;background: url(./img/eye.png);margin-right: 3px;}
+.c_on .icon-eye{background-position: 0 -15px;}
 
 .icon-yes{position: absolute;}
 
@@ -25,3 +25,12 @@
 
 .selectContent .row{margin-bottom: 40px;}
 .footerCnt{padding-top: 28px;}
+
+.modalCntWrap.majorListModal{padding-bottom: 0;}
+.majorListWrap{
+	background-color: #e5e5e5;overflow: scroll;max-height: 368px;padding:16px 12px 0;
+}
+.majorList .btn-list{
+	display: inline-block;width: 208px;font-size: 13px;background-color: #f3f3f3;margin-bottom: 14px;margin-right: 16px;border-color: #ccc;cursor: default;line-height: 28px;padding-top: 0;padding-bottom: 0;
+	&:hover{border-color: #ccc;}
+}
