--- a/src/assets/less/mod/btn.less
+++ b/src/assets/less/mod/btn.less
@@ -4,16 +4,17 @@
 .input-group{
 	.input-group-btn{display: inline-block;margin-left: -1px;}
 }
+.btn.vm{vertical-align: middle;}
 
 .btn-positive { color: #fff;border: 1px solid #f4b64f;background-color: #f4b64f;}
-.btn-negative {color: #fff;border: 1px solid #999;background-color: #999;cursor:default;}
+.btn-negative {color: #fff;border: 1px solid #999;background-color: #999;}
 .btn-primary {color: #fff;border: 1px solid #61c0e2;background-color: #61c0e2;border-radius: 3px;}
 .btn-default {color: #333;background-color: #fff;border-color: #ccc;}
 .btn-outlined {background-color: transparent;}
 .btn-outlined.btn-primary {color: #61c0e2;}
 .btn-outlined.btn-positive {color: #f4b64f;}
 .btn-positive:hover{color: #fff;border: 1px solid #E3A94F;background-color: #E3A94F;}
-.btn-negative:hover, .btn-negative.hover { color: #fff;border: 1px solid #999;background-color: #999;}
+.btn-negative:hover, .btn-negative.hover { color: #fff;border: 1px solid #666;background-color: #666;}
 .btn-primary:hover, .btn-primary.hover {color: #fff;border: 1px solid #46a4c5;background-color: #46a4c5;}
 .btn-default:hover{color: #333;background-color: #ebebeb;border-color: #adadad;}
 .btn:disabled,.btn.disabled,.btn:disabled:hover,.btn.disabled:hover{color:#fff;background-color:#ccc;border-color:#ccc;}
