--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -61,7 +61,10 @@
 }
 
 .infoList li{margin-bottom: 20px;border-bottom:1px solid #e2e2e2;padding-bottom: 20px;}
-.detailCnt{font-size: 14px;color: #999;line-height: 1.5;}
+.detailCnt{
+	font-size: 14px;color: #999;line-height: 1.5;cursor: pointer;
+	&:hover{color: #666;}
+}
 .infoList .media > .fl{margin-right: 14px;}
 .infoList .detailTitle{font-size: 18px;color: #333;margin-bottom: 12px;}
 .infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
@@ -94,4 +97,5 @@
 .coupon .well.disabled{color:#999;}
 .coupon-type{font-size: 20px;}
 .vm-wrapper{width: 99%;vertical-align: middle;}
+
 
