--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -25,6 +25,7 @@ html,body{background-color: @color-body;}
 .c-7{width: 70%;}
 .c-8{width: 80%;}
 .c-9{width: 90%;}
+.c-33{width:33.3%}; .c-66{width: 66.6%;}
 
 .settingIcon{vertical-align: middle;display: inline-block;background-image:url(../../img/setting.png);background-repeat: no-repeat;background-position: 0 0;}
 .icon-setting{width: 16px;height: 18px;background-position: 0 0;}
@@ -131,6 +132,7 @@ html,body{background-color: @color-body;}
 .badgeRow .badge{font-size: 12px;line-height: 18px;border-radius: 10px;text-align: center;min-width:36px;max-width:5em;overflow:hidden;color:#fff;margin-left: 5px;background-color: #ccc;padding:0 5px;}
 .badge.red{background-color: #eb0748;}
 .badge.green{background-color: #5aa403;}
+.article-tag{background-color: #d7d7d7;color: #666;border-radius: 3px;padding:0 10px;font-size: 14px;line-height: 24px;}
 
 .no_transList{text-align: center;}
 .noListIcon{
