预约志愿申请

--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -7,8 +7,7 @@ input,select,textarea {outline: none;}
 .iptTxtClr{display:none;position: absolute;outline: none;z-index:99;height:100%;text-align:center;vertical-align: middle;}
 .input::-ms-clear,input::-ms-clear { display: none; }
 .input:valid + .iptTxtClr { display: inline; }
-.row-divider{padding:10px 0 10px 10px;color: #999;font-weight: 500;background-color: #E8EAEC;min-height:20px;}
-.content-padded {margin: 10px;}
+textarea.form-control {height: auto;box-shadow: inset 0 1px 1px rgba(0,0,0,.075);border-radius: 4px;}
 .input.error, input.error, .error .input,.error input {border-color: #ec5524;}
 .input:focus, input.focus {border-color: #51b4ff;}
 .input[readonly]:focus,.input.disabled:focus{border-color: #ccc;}
