--- a/src/assets/less/mod/reset.less
+++ b/src/assets/less/mod/reset.less
@@ -4,6 +4,7 @@ ul,ol {list-style: none}
 img {border: 0;vertical-align: middle;}
 i{font-style:normal;}
 label,input {vertical-align: middle}
+textarea{ resize:none;}
 a,a:hover {text-decoration: none;outline: 0;}
 address,cite,dfn,em,var{font-style:normal}
 textarea {overflow: auto; vertical-align: top; }
