--- a/src/pages/bookService/index.less
+++ b/src/pages/bookService/index.less
@@ -20,3 +20,15 @@
 }
 
 .taoModal .modalSubCnt{margin-left:20px;margin-right: 20px;}
+
+.icon() {
+ 	display: inline-block;vertical-align: middle;background-repeat: no-repeat;
+}
+
+.icon-location{.icon;width:20px;height:21px;background-image:url("../../assets/img/location.png");background-position: 0 0;}
+.icon-book{background-position: -20px 0;}
+.icon-fenshu{background-position: -60px 0;}
+.icon-user{background-position: -100px 0;}
+.icon-phone{background-position: -120px 0;}
+
+.row label + .col2{margin-left: 100px;}
