--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -8,7 +8,7 @@ input,select,textarea {outline: none;}
 .input::-ms-clear,input::-ms-clear { display: none; }
 .input:valid + .iptTxtClr { display: inline; }
 textarea.form-control {height: auto;box-shadow: inset 0 1px 1px rgba(0,0,0,.075);border-radius: 4px;}
-.input.error, input.error, .error .input,.error input {border-color: #ec5524;}
+.input.error, input.error, .error .input,.error input, .error textarea{border-color: #ec5524;}
 .input:focus, input.focus {border-color: #51b4ff;}
 .input[readonly]:focus,.input.disabled:focus{border-color: #ccc;}
 .selectRow,.inputRow{border-bottom:1px solid #D0D0D0;line-height:54px;background-color:#fff;overflow:hidden;}
@@ -55,22 +55,12 @@ label.inline .form-control{display: inline-block;width:auto}
     &:hover{background-color: @color-hover;}
 }
 .c_on{background-color: @color-select;}
-.c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);}
+.c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);background-repeat: no-repeat;}
 
 .formWrap .footerCnt{border-top:1px solid #e2e2e2;margin-top:20px;}
 .formWrap .btnRow{margin-top: 24px;text-align: center;}
 .row .errInfo{height: 40px;}
 .errTxt{ visibility: hidden;color: #f83716;font-size: 14px;line-height: 18px;height: 18px; margin-top: 4px;margin-bottom:10px;text-align: center}
-
-
-.label_radio{
-    display:inline-block;position:relative;overflow:hidden;text-align:center;font-size: 15px;color: #fff;width: 80px;line-height: 32px;border-radius: 4px;background-color: @color-blue;cursor: pointer;margin-right: 20px;
-    input {background: transparent;border: 0;position: absolute;left: -100%;width: 0;height: 0}
-    &:hover{background-color: @color-hover;}
-}
-.c_on{background-color: @color-select;}
-.c_on .icon-radio{display:inline-block;width:18px;height:11px;vertical-align: middle;background:url(../../img/yes.png);}
-
 
 
 
