--- a/src/pages/bookService/templates/apply.ejs
+++ b/src/pages/bookService/templates/apply.ejs
@@ -4,7 +4,7 @@
 
 <div class="row clearfix">
   <label for="province" class="control-label column col1 fl">
-    <i class="icon-location"></i>
+    <i class="icon-location icon-user"></i>
     <em class="vm">姓名：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
@@ -15,7 +15,7 @@
 
 <div class="row clearfix">
   <label for="province" class="control-label column col1 fl">
-    <i class="icon-location"></i>
+    <i class="icon-location icon-phone"></i>
     <em class="vm">联系电话：</em></label>
   <div class="col2 inputWrap rel">
     <div class="fieldWrap">
@@ -30,9 +30,9 @@
     <em class="vm">报考地区：</em></label>
   <div class="col2 selectWrap rel">
     <div class="fieldWrap">
-      <select class="form-control" name="sex">
-          <option value="1">男</option>
-          <option value="2">女</option>
+      <select class="form-control" name="province">
+          <option value="1">浙江</option>
+          <option value="2">上海</option>
         </select>
     </div>
   </div>
@@ -71,7 +71,7 @@
 </div>
 
 <div class="row clearfix inline">
-   <textarea class="form-control" placeholder="请填写预约内容" rows="3"></textarea>
+   <textarea class="form-control" placeholder="请填写预约内容" name="content" rows="3" required></textarea>
 </div>
 
 <div class="footerCnt">
