--- a/src/pages/college_2/index.less
+++ b/src/pages/college_2/index.less
@@ -7,8 +7,8 @@
 }
 
 .dbWrapper{margin-top: 12px;}
-.college .col1{width:590px;}
-.college .col2{width:300px;}
+.db .col1{width:590px;}
+.db .col2{width:300px;}
 
 .formWrap{background-color: #fff;padding:20px 24px 36px;margin-bottom: 30px;}
 .row.inline > * {display: inline-block;}
