--- a/src/pages/major/index.less
+++ b/src/pages/major/index.less
@@ -24,11 +24,9 @@
 .badgeRow{margin-bottom: 10px;}
 .badgeRow .badgetitle{display: inline-block;color:#333;font-size:18px;margin-right: 8px;}
 
-.schoolList li{padding:16px 0;border-bottom:1px solid #e2e2e2;margin-bottom: 10px;}
-.schoolList .detail{
-	font-size: 14px;color: #555;line-height: 1.5;
-	.field{display: inline-block;margin-right: 16px;color:@color-orange;}
-	.field:last-child{margin-right:0;}
+.majorListWrap{
+	margin-top: 20px;
+	.bg{margin-bottom: 16px;}
+	li{margin-bottom: 10px;}
+	.majorBtnRow .btn{font-size: 13px;width:108px;padding: 5px 0;margin-right: 20px;margin-bottom:10px;border-radius: 0;}
 }
-.schoolList .btn{margin-top: 6px;}
-.schoolListWrap{border-top:1px solid #e2e2e2;margin-top: 24px;}
