--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -16,7 +16,7 @@
 	line-height: 36px;
 	& > a{margin-right: 14px;}
 }
-.m-login{padding-left: 14px;border-left:1px solid @color-blue;}
+.m-login{padding-left: 14px;}
 .hd-login{
 	font-size: 18px;line-height:26px;color: #fff;border-radius: 4px;padding:5px 14px;background-color: @color-blue;
 	.link{color:#fff;}
