--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -146,6 +146,10 @@ html,body{background-color: @color-body;}
 	background-image: url(../../img/noListIcon.png);width:67px;height: 55px;background-position: 0 0;
 }
 
-.preloading {background: url(//wacai-file.b0.upaiyun.com/finance/image/web/preload.gif) 50% 50px no-repeat;}
+.preloading {background: url(../../img/loading.gif) 50% 50px no-repeat;}
 .preloading .contentWrap{visibility: hidden;}
+
+.icon-pro{width: 25px;height: 25px;background-position: 0 -68px;}
+.icon-con{width: 25px;height: 25px;background-position: -25px -68px;}
+.icon-fav{width:17px;height: 15px;background-position: 0 -20px;}
 
