--- a/src/pages/infoDetail/index.less
+++ b/src/pages/infoDetail/index.less
@@ -9,4 +9,4 @@
 .thirdParts{margin: 40px 0 48px;}
 .procons .btn{display: inline-block;width: 156px;border-radius: 4px;margin-right: 40px;font-size: 16px;}
 .procons .btn.last{margin-right: 0;}
-.shareComponents{margin-top: 40px;}
+.shareComponents{margin: 40px auto 0;width: 280px;}
