--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -26,12 +26,16 @@
 .myInfo{display: block;}
 
 .wellWrapper .well{background-color: #f9f9f9;border:1px solid #dadada;padding:15px;font-size: 14px;color:#333;line-height: 20px;margin-bottom: 30px;}
-.well .media {
+#historyWrapper .well .media {
 	margin-top: 8px;
+}
+
+.well .media{
 	.fl{margin-right:16px;
 		.btn{width:108px;padding:9px 0;}
 	} 
 }
+
 .well .media-body .field{display: inline-block;margin-right: 30px;}
 .detailInfo {
 	.btn{padding-top:5px;padding-bottom: 5px;} 
