--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -46,7 +46,7 @@
 }
 
 // 3.recommend
-.s-recommend{padding: 32px 0;}
+.s-recommend{padding: 32px 0;border-top:1px solid #e2e2e2;}
 .recommendList{
 	margin-left: -25px;margin-right: -25px;
 	li{width:50%;float: left;margin-bottom: 16px;}
@@ -115,3 +115,15 @@
 }
 .coopLists{margin-right:6px;}
 .coop{box-shadow: 1px 2px 1px #eaeaea;text-align: center;background-color: #fff;margin-bottom: 20px;line-height: 140px;}
+
+// 图片轮播
+.s-carousel{margin-top: 25px;margin-bottom: 25px;}
+.collegeWrap{position: relative;height: 78px;}
+.collegeList{
+	margin-left: 0;
+	li{
+	float:left;width: 156px;margin-right: 12px;background-color: #fff;border:1px solid #e2e2e2;height: 100%;line-height:76px;text-align: center;
+	a{display: block;}
+}
+}
+
