更新登陆页

--- a/src/assets/components/forgetPw/tmpl.ejs
+++ b/src/assets/components/forgetPw/tmpl.ejs
@@ -25,7 +25,7 @@
       <input type="text" class="input form-control" id="code" name="code" maxLength="4" placeholder="请输入短信验证码" required autocomplete="off">
       <label class="usn verifyLabel active tc" id="verifyLabel">
           <em id="minCount" class="dn">
-              <b class="red n">
+              <b class="n">
                   <time>-</time>
                   秒</b>后重新发送
           </em>
