--- a/src/assets/components/modalBox/lib/more.less
+++ b/src/assets/components/modalBox/lib/more.less
@@ -4,7 +4,7 @@
 .modalBox .modalCntWrap h3{padding:0 12px 0 24px;font-weight: normal;border-top-left-radius:8px;border-top-right-radius:8px;}
 .modalBox h3 .btn-close{margin-top: 14px;}
 .modalBox .modalPadd{padding:30px 50px;font-size:14px;color:#666;}
-.modalBox .footerCnt{margin-top:29px;border-top:1px solid #dfdfdf;}
+.modalBox .footerCnt{margin-top:30px;}
 .modalBox .btn-row{text-align: center;}
 .modalBox .confirmBtnRow .btn-confirm{margin-left: 30px;}
 .w480 .modalBox-content{width: 480px;max-width: none;border-radius:8px;}
