--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -2,8 +2,15 @@ body{background-color: #ceeaf4;}
 .container{width:488px;}
 .loginWrap{padding-top: 60px;}
 .logoWrap{margin-bottom: 60px;}
-.inputRows{ background-color: #fff;border-radius: 4px;box-shadow: 0 1px #ccc;border: 1px solid #e2e2e2;border-bottom: none;}
-.inputRows .row{border-bottom: 1px solid #e2e2e2;}
-.line span{background-color:#ceeaf4;}
+.loginWrap .inputRows{ background-color: #fff;border-radius: 4px;box-shadow: 0 1px #ccc;border: 1px solid #e2e2e2;border-bottom: none;}
+.loginWrap .inputRows .row{border-bottom: 1px solid #e2e2e2;}
+.loginWrap .line span{background-color:#ceeaf4;}
 .bBar{color: #33788e;font-size: 14px;padding-bottom: 20px;margin-top: 80px;}
-.formWrap .footerCnt{border-top: none;}
+.loginWrap .formWrap .footerCnt{border-top: none;}
+
+#loginForm{
+	.p-error{display: none;}
+	.p-error-empty{display: none;}
+}
+
+.loginWrap .formWrap .btnRow{margin-top: 0;}
