--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -7,6 +7,6 @@
 @import "mod/header.less";
 @import "mod/layout.less";
 @import "mod/footer.less";
-
+@import "mod/dropdown.less";
 
 @import "./sidebar.less";
