--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -51,9 +51,11 @@
 	.caret{border-top-color: #1d718f;border-width: 6px;position: relative;top:-2px;}
 }
 
+.navLists .options{
+	display: none;	
+}
 .navLists .fancy-select .options{
 	top: 64px;
-	display: none;	
 }
 .navLists .fancy-select .options.open{
 	top: 72px;	
