--- a/src/assets/less/mod/header.less
+++ b/src/assets/less/mod/header.less
@@ -49,6 +49,7 @@
 		}
 	}
 	.caret{border-top-color: #1d718f;border-width: 6px;position: relative;top:-2px;}
+	.options{position: absolute;}
 }
 
 .navLists .options{
