--- a/src/pages/majorExam2/index.less
+++ b/src/pages/majorExam2/index.less
@@ -35,5 +35,5 @@
 
 .progressWrap{margin-top: 80px;height:12px;border:1px solid #666;position: relative;}
 .progressInner{position:absolute;left:0;top:0;background-color: @color-blue;height:100%;width:0;display: inline-block;}
-.progressCount{font-size: 15px;color: #000;margin:10px 0;}
+.progressCount{font-size: 15px;color: #000;margin:10px 0 40px;}
 #subTestFooter{display: none;}
