--- a/src/assets/less/mod/layout.less
+++ b/src/assets/less/mod/layout.less
@@ -17,6 +17,8 @@ html,body{background-color: @color-body;}
 	.lookIcon();background-image: url(../../img/taoIcon.png);
 }
 
+.favIcon{width:17px;height: 15px;background-position: 0 -20px;margin-right: 6px;}
+
 .c-2{width: 20%;}
 .c-3{width: 30%;}
 .c-4{width: 40%;}
