--- a/src/pages/infoDetail/index.less
+++ b/src/pages/infoDetail/index.less
@@ -10,3 +10,7 @@
 .procons .btn{display: inline-block;width: 156px;border-radius: 4px;margin-right: 40px;font-size: 16px;}
 .procons .btn.last{margin-right: 0;}
 .shareComponents{margin: 40px auto 0;width: 280px;}
+
+.btn-fav.faved .unfavedTxt {
+    display: inline-block;
+}
