--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -15,7 +15,8 @@
 .big .figbar{height:48px;line-height: 48px;}
 .mid .figbar{height:38px;line-height: 38px;}
 .sml .figbar{height:48px;line-height: 1.2;padding:6px 10px;}
-.bot .column{width: 240px;}
+.bot{margin-right: -10px;}
+.bot .column{width: 240px;margin-right: 10px;}
 
 .infoLists{margin-top: 28px;}
 .infoList li{margin-bottom: 20px;border-bottom:1px solid #e2e2e2;padding-bottom: 20px;}
