--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -24,7 +24,10 @@
 	font-size: 14px;color: #999;line-height: 1.5;cursor: pointer;
 	&:hover{color: #666;}
 }
-.infoList .media > .fl{margin-right: 14px;}
+.infoList .media > .fl{
+	margin-right: 14px;display: inline-block;width: 130px;height: 130px;
+	img{max-width: 100%;height: auto;display: inline-block;}
+}
 .infoList .detailTitle{font-size: 18px;color: #333;margin-bottom: 12px;}
 .infoList .btn-negative{padding-top:2px;padding-bottom: 2px;}
 .infoList .detailCnt{margin-top: 24px;}
