--- a/src/pages/majorExam1/templates/tmpl.ejs
+++ b/src/pages/majorExam1/templates/tmpl.ejs
@@ -18,11 +18,10 @@
         <em class="vm">授权码：</em></label>
       <div class="col2 inputWrap rel">
         <div class="fieldWrap">
-          <input type="text" class="input form-control" id="name" name="name" maxlength="6" required placeholder="请输入授权码" pattern="^\w{6}">
+          <input type="text" class="input form-control" id="code" name="code" maxlength="6" required placeholder="请输入授权码">
         </div>
       </div>
       <div class="errInfo">
-        <span class="p-error">授权码为6位字母、数字格式</span>
         <span class="p-error-empty">授权码不能为空</span>
       </div>
   </div>
