--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -102,4 +102,9 @@
 .coupon-type{font-size: 20px;}
 .vm-wrapper{width: 99%;vertical-align: middle;}
 
-
+.avatarWrap .thumbnail{
+	width: 84px;height: 84px;border:1px solid #dadada;cursor: pointer;
+	.info{position: absolute;font-size: 12px;line-height: 24px;bottom:0;left:0;right:0;color:#fff;text-align: center;background:#999;background-color: rgba(0, 0, 0, 0.3);}
+	&:hover .info{opacity: 0.7;}
+	img.responsive{width: 100%;}
+}
