--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -125,7 +125,7 @@
 .collegeList{
 	margin-left: 0;
 	li{
-	float:left;width: 156px;margin-right: 12px;background-color: #fff;border:1px solid #e2e2e2;height: 100%;line-height:76px;text-align: center;
+	float:left;margin-right: 12px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
 	a{display: block;width: 140px;height: 60px;}
 }
 }
