--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -50,3 +50,5 @@
 	a:hover{color: #666;}
 	.label{background-color: #d7d7d7;display:inline-block;line-height: 32px;width:80px;margin-right: 8px;text-align: center;}
 }
+
+.btnLoadingWrap{margin-bottom: 32px;}
