--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -24,6 +24,7 @@
 	font-size: 14px;color: #999;line-height: 1.5;cursor: pointer;
 	&:hover{color: #666;}
 }
+.infoList{min-height: 300px;}
 .infoList .media > .fl{
 	margin-right: 14px;display: inline-block;width: 130px;height: 130px;
 	img{max-width: 100%;height: auto;display: inline-block;}
