--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -8,5 +8,6 @@
 @import "mod/layout.less";
 @import "mod/footer.less";
 @import "mod/dropdown.less";
+@import "mod/direct.less";
 
 @import "./sidebar.less";
