--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -125,8 +125,9 @@
 .collegeList{
 	margin-left: 0;
 	li{
-	float:left;margin-right: 12px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
-	a{display: block;width: 140px;height: 60px;}
+	float:left;margin-right: 12px;width:155px;background-color: #fff;border:1px solid #e2e2e2;text-align: center;
+	a{display: block;width: 140px;height: 60px;text-align: center;}
+	img{max-width: 100%;max-height: 100%;}
 }
 }
 
