--- a/src/pages/expertOrder/templates/apply.ejs
+++ b/src/pages/expertOrder/templates/apply.ejs
@@ -27,10 +27,10 @@
 <div class="row clearfix">
   <label for="province" class="control-label column col1 fl">
     <i class="icon-location"></i>
-    <em class="vm">报考地区：</em></label>
+    <em class="vm">所在城市：</em></label>
   <div class="col2 selectWrap rel">
     <div class="fieldWrap">
-      <select class="form-control" name="province">
+      <select class="form-control" name="city">
           <option value="1">浙江</option>
           <option value="2">上海</option>
         </select>
