--- a/src/pages/bookStep2/index.less
+++ b/src/pages/bookStep2/index.less
@@ -1,7 +1,7 @@
 .breadcrumb li{width:25%;}
 .formWrap{background-color: #fff;padding:32px 24px;margin-bottom: 30px;}
 
-.formWrap .btn-positive{margin-right: 30px;}
+.formWrap .btnRow .btn{margin-right: 30px;}
 
 .selectContent .col1,.selectContent .col2{margin-right: 80px;}
 .selectContent h4{color:#333;font-size: 16px;font-weight: normal;margin-bottom: 12px;}
