--- a/src/pages/bookStep3/index.less
+++ b/src/pages/bookStep3/index.less
@@ -5,7 +5,7 @@
 
 .formWrap .btn-positive{margin-right: 30px;}
 
-.label_radio{
+.label_check{
     font-size: 13px;color: #333;width: 110px;overflow:visible;line-height: 32px;cursor: pointer;margin-right: 30px;background-color: #f3f3f3;border:1px solid #ccc;user-select: none;
     input {background: transparent;border: 0;position: absolute;left: -100%;width: 0;height: 0;visibility: hidden;}
     &.c_on{border-color: #61c0e2;}
