--- a/src/assets/less/mod/form.less
+++ b/src/assets/less/mod/form.less
@@ -49,7 +49,7 @@ input[readonly]{color:#999;background-color: #f3f3f3;border-color:#e7e7e7;}
 .row label + .col2{width: auto;margin-left: 90px;}
 label.inline .form-control{display: inline-block;width:auto}
 
-.label_radio{
+.label_radio,.label_check{
     display:inline-block;position:relative;overflow:hidden;text-align:center;font-size: 15px;color: #fff;width: 80px;line-height: 32px;border-radius: 4px;background-color: @color-blue;cursor: pointer;margin-right: 20px;
     input {background: transparent;border: 0;position: absolute;left: -100%;width: 0;height: 0}
     &:hover{background-color: @color-hover;}
